Fix alignment issues on team page

--- a/assets/styles/team-styles.scss
+++ b/assets/styles/team-styles.scss
@@ -11,9 +11,17 @@
   text-align: center;
 }
 
-.divder {
+.divider {
+  position: relative;
   text-align: center;
   padding-top: 20px;
+}
+
+.divider::before {
+  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
+  display: block;
+  text-align: center;
+  width: 100%;
 }
 
 @media (max-width: 425px) {
@@ -55,5 +63,6 @@ div.column {
     overflow-x: initial;
     vertical-align: middle;
     width: 50%;
+    padding-bottom: 15px;
 }
 
